cards block fixed(another wey of spacing between cards). Khan block edinted(book pic size and position changed)

--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,4 +1,9 @@
 .cards__item {
   width: 240px;
-  margin: 60px 30px 0;
+  padding-top: 60px;
+}
+
+.cards__item:nth-child(3n + 2),
+.cards__item:nth-child(3n) {
+  margin-left: 100px;
 }
